# PDMKit_Firmware

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RemoteSetupAPI.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  hello_world_main.c  hello_world_main.cpp  main.cpp
main/helper/: README.md  board_pins.hpp  can_store.cpp  can_store.hpp  expr.cpp  expr.hpp  gpio.cpp  gpio.hpp  io_config.cpp  io_config.hpp  io_rules.cpp  io_rules.hpp  storage.c  storage.cpp  storage.h  storage.hpp
main/tasks/: can_task.cpp  can_task.hpp  main_controller.cpp  main_controller.hpp  remote_setup_task.cpp  remote_setup_task.hpp  task.cpp  task.hpp
scripts/: build.ps1  erase_flash.ps1  flash.ps1  flash_monitor.ps1  monitor.ps1  openocd.ps1  parse_nvs.py  read_storage.ps1
tools/: pdmkit_setup.py
